<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/black"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:layout_width="58dp"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_arrow_back_24"
            android:background="@android:color/transparent"
            app:tint="@color/white"/>

        <TextView
            android:layout_width="354dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity=""
            android:text="@string/CreaCompte"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity=""
        android:paddingStart="16dp"
        android:text="@string/CreaNvxCompte"
        android:textSize="17sp"
        tools:ignore="RtlSymmetry"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="53dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="151dp"
        android:gravity="">


        <EditText
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:hint="@string/prenom"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="150dp" />

        <ImageView
            android:layout_width="45dp"
            android:layout_marginStart="20dp"
            android:layout_height="34dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/person"
            app:tint="@color/grey"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="156dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="200dp"
        android:gravity="">


        <EditText
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:hint="@string/nom"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="151dp" />

        <ImageView
            android:layout_width="45dp"
            android:layout_marginStart="20dp"
            android:layout_height="34dp"
            android:layout_gravity="center_vertical"
            app:tint="@color/grey"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="156dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="34dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/baseline_email_24"
            android:layout_gravity="center_vertical"
            app:tint="@color/grey"
            />

        <EditText
            android:layout_width="325dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:hint="@string/mail" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="34dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/baseline_lock_24"
            android:layout_gravity="center_vertical"
            app:tint="@color/grey"
            />

        <EditText
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_width="325dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/mdp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        tools:ignore="ExtraText">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="34dp"
            android:src="@drawable/phone"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            app:tint="@color/grey"
            />

        <Spinner
            android:id="@+id/dynamic_spinner"
            android:layout_width="125dp"
            android:layout_height="38dp"
            android:layout_gravity="start|center"
            android:layout_margin="65dp"
            android:dropDownWidth="match_parent"
            android:spinnerMode="dropdown"
            android:entries="@array/spinner_options" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:hint="@string/mobile"/>

    </FrameLayout>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/Connexion"
        android:textColor="@color/white"
        android:background="@drawable/squared_button"
        app:backgroundTint="@android:color/holo_orange_dark"
        />


</LinearLayout>